force-app/main/default/objects/Opportunity/fields/AdditionalBOS__c.field-meta.xml
<CustomField>
    <fullName>AdditionalBOS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Additional back office specialist</description>
    <inlineHelpText>Additional back office specialist</inlineHelpText>
    <label>Additional BO specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities_AdditionalBOS</relationshipName>
    <type>Lookup</type>
</CustomField>