force-app/main/default/objects/Opportunity/fields/AdditionalNumber__c.field-meta.xml
<CustomField>
    <fullName>AdditionalNumber__c</fullName>
    <description>Reference number of the opportunity that is used by BO.</description>
    <externalId>true</externalId>
    <inlineHelpText>Reference number of the opportunity that is used by BO.</inlineHelpText>
    <label>Additional Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>