force-app/main/default/objects/Opportunity/fields/AmountWon__c.field-meta.xml
<CustomField>
    <fullName>AmountWon__c</fullName>
    <formula>IF(
IsWon = TRUE,
Amount,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Won</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>