force-app/main/default/objects/Opportunity/fields/AssignedBOS__c.field-meta.xml
<CustomField>
    <fullName>AssignedBOS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Assigned back office specialist</description>
    <inlineHelpText>Assigned back office specialist</inlineHelpText>
    <label>Assigned BO specialist</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <filterItems>
            <field>User.Profile.UserType</field>
            <operation>notEqual</operation>
            <value>CSPLitePortal</value>
        </filterItems>
        <filterItems>
            <field>User.SalesDivision__c</field>
            <operation>equals</operation>
            <valueField>$Source.MarketSegment__c</valueField>
        </filterItems>
        <filterItems>
            <field>User.SalesDivision__c</field>
            <operation>equals</operation>
            <valueField>$Source.CrossMarketSegment__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities_AssignedBOS</relationshipName>
    <type>Lookup</type>
</CustomField>