force-app/main/default/objects/Opportunity/fields/BidBond__c.field-meta.xml
<CustomField>
    <fullName>BidBond__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not the bid bond stage is completed.</description>
    <inlineHelpText>Whether or not the bid bond stage is completed.</inlineHelpText>
    <label>Bid Bond</label>
    <type>Checkbox</type>
</CustomField>