force-app/main/default/objects/Opportunity/fields/BidGuarantees__c.field-meta.xml
<CustomField>
    <fullName>BidGuarantees__c</fullName>
    <label>BidGuarantees</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>