force-app/main/default/objects/Opportunity/fields/Cancel_reason__c.field-meta.xml
<CustomField>
    <fullName>Cancel_reason__c</fullName>
    <label>Cancel reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Out of product range/size</fullName>
            </value>
            <value>
                <fullName>Out of steel grade</fullName>
            </value>
            <value>
                <fullName>Out of standard</fullName>
            </value>
            <value>
                <fullName>Out of shipment conditions</fullName>
            </value>
            <value>
                <fullName>Client refusal</fullName>
            </value>
            <value>
                <fullName>Price not agreed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>