force-app/main/default/objects/Opportunity/fields/CommentToBackoffice__c.field-meta.xml
<CustomField>
    <fullName>CommentToBackoffice__c</fullName>
    <description>Any comment that will be included in the text of the email that is sent to the selected back-office specialist (when the opp is sent to him).</description>
    <inlineHelpText>Any comment that will be included in the text of the email that is sent to the selected back-office specialist (when the opp is sent to him).</inlineHelpText>
    <label>Comment To Backoffice</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>