force-app/main/default/objects/Opportunity/fields/CountOfProductsWithoutMargin__c.field-meta.xml
<CustomField>
    <fullName>CountOfProductsWithoutMargin__c</fullName>
    <description>Service field to define if there are still any opportunity products without margin calculated.</description>
    <inlineHelpText>Service field to define if there are still any opportunity products without margin calculated.</inlineHelpText>
    <label>Count of products without margin</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Margin_t__c</field>
        <operation>equals</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>