force-app/main/default/objects/Opportunity/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Country that products should be delivered to</description>
    <inlineHelpText>Country that products should be delivered to</inlineHelpText>
    <label>Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>