force-app/main/default/objects/Opportunity/fields/CreatedDate_ERP__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate_ERP__c</fullName>
    <label>Created Date in ERP</label>
    <type>DateTime</type>
</CustomField>