force-app/main/default/objects/Opportunity/fields/CrossMarketComplete__c.field-meta.xml
<CustomField>
    <fullName>CrossMarketComplete__c</fullName>
    <formula>AND(
  NOT(ISBLANK(CrossMarketManager__c)),
  NOT(ISBLANK(TEXT(CrossMarketSegment__c))),
  NOT(ISBLANK(CrossMarketShare__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CrossMarketComplete</label>
    <type>Checkbox</type>
</CustomField>