force-app/main/default/objects/Opportunity/fields/CrossMarketManager__c.field-meta.xml
<CustomField>
    <fullName>CrossMarketManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cross Market Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.JobTitle__c</field>
            <operation>equals</operation>
            <value>Senior Sales Manager, Sales Manager</value>
        </filterItems>
        <filterItems>
            <field>User.SalesDivision__c</field>
            <operation>equals</operation>
            <valueField>$Source.CrossMarketSegment__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>CrossOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>