force-app/main/default/objects/Opportunity/fields/CrossMarketNotified__c.field-meta.xml
<CustomField>
    <fullName>CrossMarketNotified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CrossMarketNotified</label>
    <type>Checkbox</type>
</CustomField>