force-app/main/default/objects/Opportunity/fields/CrossMarketNotifiedAt__c.field-meta.xml
<CustomField>
    <fullName>CrossMarketNotifiedAt__c</fullName>
    <label>CrossMarketNotifiedAt</label>
    <type>DateTime</type>
</CustomField>