force-app/main/default/objects/Opportunity/fields/CrossMarketShare__c.field-meta.xml
<CustomField>
    <fullName>CrossMarketShare__c</fullName>
    <defaultValue>0.5</defaultValue>
    <label>Cross Market Share</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>