force-app/main/default/objects/Opportunity/fields/CrossMarketTouched__c.field-meta.xml
<CustomField>
    <fullName>CrossMarketTouched__c</fullName>
    <formula>OR(
  NOT(ISBLANK(CrossMarketManager__c)),
  NOT(ISBLANK(TEXT(CrossMarketSegment__c))),
  NOT(ISBLANK(CrossMarketShare__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CrossMarketTouched</label>
    <type>Checkbox</type>
</CustomField>