force-app/main/default/objects/Opportunity/fields/CrossMarketWonNotified__c.field-meta.xml
<CustomField>
    <fullName>CrossMarketWonNotified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CrossMarketWonNotified</label>
    <type>Checkbox</type>
</CustomField>