force-app/main/default/objects/Opportunity/fields/CrossMarketWonNotifiedAt__c.field-meta.xml
<CustomField>
    <fullName>CrossMarketWonNotifiedAt__c</fullName>
    <label>CrossMarketWonNotifiedAt</label>
    <type>DateTime</type>
</CustomField>