force-app/main/default/objects/Opportunity/fields/DashboardsGSP__Days_Open__c.field-meta.xml
<CustomField>
    <fullName>DashboardsGSP__Days_Open__c</fullName>
    <formula>IF(ISBLANK( DashboardsGSP__Date_Opportunity_was_Closed__c ),
NOW() - CreatedDate,
DashboardsGSP__Date_Opportunity_was_Closed__c - DATEVALUE(CreatedDate)
)+1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Includes the day the Opportunity was opened.</inlineHelpText>
    <label>Days Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>