force-app/main/default/objects/Opportunity/fields/DashboardsGSP__Days_Since_Last_Stage_Change__c.field-meta.xml
<CustomField>
    <fullName>DashboardsGSP__Days_Since_Last_Stage_Change__c</fullName>
    <description>Number of days since the last change in Opportunity Stage.</description>
    <formula>IF(ISBLANK(DashboardsGSP__Date_Opportunity_was_Closed__c),
TODAY()-DashboardsGSP__Last_Stage_Change_Date__c,
DashboardsGSP__Date_Opportunity_was_Closed__c - DashboardsGSP__Last_Stage_Change_Date__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days since the Opportunity Stage was last changed.</inlineHelpText>
    <label>Days Since Last Stage Change</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>