force-app/main/default/objects/Opportunity/fields/DeliveryTerms__c.field-meta.xml
<CustomField>
    <fullName>DeliveryTerms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Terms</label>
    <referenceTo>DeliveryTerms__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>