force-app/main/default/objects/Opportunity/fields/End_Consumer__c.field-meta.xml
<CustomField>
    <fullName>End_Consumer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Current client is an intermediary and placing an order for another customer, which must be selected here</description>
    <inlineHelpText>Current client is an intermediary and placing an order for another customer, which must be selected here</inlineHelpText>
    <label>End Consumer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (End Consumer)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>