force-app/main/default/objects/Opportunity/fields/EndUser__c.field-meta.xml
<CustomField>
    <fullName>EndUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>End user of the products.</description>
    <inlineHelpText>End user of the products.</inlineHelpText>
    <label>Ultimate Consignee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>