force-app/main/default/objects/Opportunity/fields/ExpectedDelivDate__c.field-meta.xml
<CustomField>
    <fullName>ExpectedDelivDate__c</fullName>
    <label>Expected Delivery Date</label>
    <type>Date</type>
</CustomField>