force-app/main/default/objects/Opportunity/fields/Extra_Information__c.field-meta.xml
<CustomField>
    <fullName>Extra_Information__c</fullName>
    <inlineHelpText>Additional information about the project</inlineHelpText>
    <label>Extra Informartion</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>