force-app/main/default/objects/Opportunity/fields/ForecastCategory__c.field-meta.xml
<CustomField>
    <fullName>ForecastCategory__c</fullName>
    <description>Custom picklist used to manage the standard picklist apart from the opportunity stages.</description>
    <inlineHelpText>Forecast category that manager assigns manually despite the opportunity stage.</inlineHelpText>
    <label>Forecast Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pipeline</fullName>
                <default>true</default>
                <label>Pipeline</label>
            </value>
            <value>
                <fullName>Best Case</fullName>
            </value>
            <value>
                <fullName>Commit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>