force-app/main/default/objects/Opportunity/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <description>Industry for new opportunity</description>
    <inlineHelpText>Please define Industry for your Opportunity</inlineHelpText>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Industries</valueSetName>
    </valueSet>
</CustomField>