force-app/main/default/objects/Opportunity/fields/ItemsCount__c.field-meta.xml
<CustomField>
    <fullName>ItemsCount__c</fullName>
    <label>Items Count</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>