force-app/main/default/objects/Opportunity/fields/ITENumber__c.field-meta.xml
<CustomField>
    <fullName>ITENumber__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Number of the order in the IT-Enterprise system</description>
    <externalId>true</externalId>
    <inlineHelpText>Number of the order in the IT-Enterprise system</inlineHelpText>
    <label>ITE Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>