force-app/main/default/objects/Opportunity/fields/LastSyncERP__c.field-meta.xml
<CustomField>
    <fullName>LastSyncERP__c</fullName>
    <description>Date/time of the last synchronization with ERP system</description>
    <inlineHelpText>Date/time of the last synchronization with ERP system</inlineHelpText>
    <label>Last Sync (ERP)</label>
    <type>DateTime</type>
</CustomField>