force-app/main/default/objects/Opportunity/fields/LegalDept__c.field-meta.xml
<CustomField>
    <fullName>LegalDept__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not the legal department has approved customers terms and conditions.</description>
    <inlineHelpText>Whether or not the legal department has approved customers terms and conditions.</inlineHelpText>
    <label>Legal Dept Approval</label>
    <type>Checkbox</type>
</CustomField>