force-app/main/default/objects/Opportunity/fields/LostReason__c.field-meta.xml
<CustomField>
    <fullName>LostReason__c</fullName>
    <label>Lost Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Size Range</fullName>
                <label>Out of size range</label>
            </value>
            <value>
                <fullName>Steel Grade</fullName>
                <label>Out of steel grade</label>
            </value>
            <value>
                <fullName>Product Range</fullName>
                <label>Out of product range</label>
            </value>
            <value>
                <fullName>Price</fullName>
                <label>Price loss</label>
            </value>
            <value>
                <fullName>Mill Capacity</fullName>
                <label>No mill capacity</label>
            </value>
            <value>
                <fullName>Less than min production q-ty</fullName>
            </value>
            <value>
                <fullName>Delivery time</fullName>
            </value>
            <value>
                <fullName>Tender Requirements</fullName>
                <label>Nonconformity with tender requirements</label>
            </value>
            <value>
                <fullName>Documentation</fullName>
                <label>Bad documentation</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>