force-app/main/default/objects/Opportunity/fields/LostReasonDetails__c.field-meta.xml
<CustomField>
    <fullName>LostReasonDetails__c</fullName>
    <inlineHelpText>Please give detailed explanation why the Opportunity was lost.</inlineHelpText>
    <label>Lost Reason Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>