force-app/main/default/objects/Opportunity/fields/ManageForecastCategory__c.field-meta.xml
<CustomField>
    <fullName>ManageForecastCategory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked then user can manually assign forecast category to the opportunity disregarding its current stage (except closed).</description>
    <inlineHelpText>If checked then user can manually assign forecast category to the opportunity disregarding its current stage (except closed).</inlineHelpText>
    <label>Manage Forecast Category</label>
    <type>Checkbox</type>
</CustomField>