force-app/main/default/objects/Opportunity/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <description>Anticipated difference between opportunity revenue and cost of production, calculated by finance department in price approval process.</description>
    <formula>IF(CountOfProductsWithoutMargin__c  = 0, MarginSum__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Anticipated difference between opportunity revenue and cost of production, calculated by finance department in price approval process.</inlineHelpText>
    <label>Total Margin (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>