force-app/main/default/objects/Opportunity/fields/MarginSum__c.field-meta.xml
<CustomField>
    <fullName>MarginSum__c</fullName>
    <description>Service field - summarized margin of all opportunity products.</description>
    <label>Margin (sum)</label>
    <summarizedField>OpportunityLineItem.Margin__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>