force-app/main/default/objects/Opportunity/fields/MarketSegment__c.field-meta.xml
<CustomField>
    <fullName>MarketSegment__c</fullName>
    <description>Market segment where the products are being sold</description>
    <inlineHelpText>Market segment where the products are being sold</inlineHelpText>
    <label>Market Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MarketSegments</valueSetName>
    </valueSet>
</CustomField>