force-app/main/default/objects/Opportunity/fields/OppType__c.field-meta.xml
<CustomField>
    <fullName>OppType__c</fullName>
    <formula>IF(
					OR(RecordTypeId=&apos;0120Y0000015nlmQAA&apos;,RecordTypeId=&apos;0121n000000FrcLAAS&apos;),
					&apos;TENDER&apos;,&apos;ORDINARY&apos;
	)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OppType</label>
    <type>Text</type>
</CustomField>