force-app/main/default/objects/Opportunity/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Custom field that duplicates system OwnerId field to allow related list of opportunities on user&apos;s profile page layout.</description>
    <label>Opportunity Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities_Owner</relationshipName>
    <type>Lookup</type>
</CustomField>