force-app/main/default/objects/Opportunity/fields/PaymentTerms__c.field-meta.xml
<CustomField>
    <fullName>PaymentTerms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Payment terms for the opportunity</description>
    <inlineHelpText>Payment terms for the opportunity</inlineHelpText>
    <label>Payment Terms</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>PaymentTerms__c.Obsolete__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>PaymentTerms__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>