force-app/main/default/objects/Opportunity/fields/Project_Link__c.field-meta.xml
<CustomField>
    <fullName>Project_Link__c</fullName>
    <label>Project Link</label>
    <type>Url</type>
</CustomField>