force-app/main/default/objects/Opportunity/fields/SecondChoice__c.field-meta.xml
<CustomField>
    <fullName>SecondChoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Second Choice (obsolete)</label>
    <type>Checkbox</type>
</CustomField>