force-app/main/default/objects/Opportunity/fields/SecondChoiceProductsNumber__c.field-meta.xml
<CustomField>
    <fullName>SecondChoiceProductsNumber__c</fullName>
    <description>Number of related products marked as second choice.</description>
    <label>Second Choice Products Number</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.IsSecondChoiceProduct__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>