force-app/main/default/objects/Opportunity/fields/SyncedOrder__c.field-meta.xml
<CustomField>
    <fullName>SyncedOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Synced Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>