force-app/main/default/objects/Opportunity/fields/Tag__c.field-meta.xml
<CustomField>
    <fullName>Tag__c</fullName>
    <description>Opportunity tag that is used to assign inbound email messages</description>
    <externalId>true</externalId>
    <inlineHelpText>If and inbound email theme text contains this tag it will be assigned to this opportunity.</inlineHelpText>
    <label>Opportunity Tag</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>