force-app/main/default/objects/Opportunity/recordTypes/New_Client_Enquiry.recordType-meta.xml
<RecordType>
    <fullName>New_Client_Enquiry</fullName>
    <active>true</active>
    <businessProcess>RFP</businessProcess>
    <description>New Client`s Enquiry</description>
    <label>New Client`s Enquiry</label>
</RecordType>