force-app/main/default/objects/Opportunity/recordTypes/Tubes_RFP.recordType-meta.xml
<RecordType>
    <fullName>Tubes_RFP</fullName>
    <active>true</active>
    <businessProcess>RFP</businessProcess>
    <description>Request for Proposal (not tender)</description>
    <label>Tubes: Simple RFP</label>
</RecordType>