force-app/main/default/objects/Opportunity/recordTypes/Tubes_Tender.recordType-meta.xml
<RecordType>
    <fullName>Tubes_Tender</fullName>
    <active>true</active>
    <businessProcess>Tender</businessProcess>
    <description>Participating in customer&apos;s tender</description>
    <label>Tubes: Tender</label>
</RecordType>