force-app/main/default/objects/Opportunity/recordTypes/Wheels_RFP.recordType-meta.xml
<RecordType>
    <fullName>Wheels_RFP</fullName>
    <active>true</active>
    <businessProcess>RFP</businessProcess>
    <description>Request for proposal (not tender)</description>
    <label>Wheels: Simple RFP</label>
</RecordType>