force-app/main/default/objects/Opportunity/recordTypes/Wheels_Tender.recordType-meta.xml
<RecordType>
    <fullName>Wheels_Tender</fullName>
    <active>true</active>
    <businessProcess>Tender</businessProcess>
    <description>Participation in customer&apos;s tender</description>
    <label>Wheels: Tender</label>
</RecordType>