force-app/main/default/objects/Opportunity/validationRules/Closed_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Status</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
     ISPICKVAL(PRIORVALUE(StageName),&quot;Closed Won&quot;)
) 
&amp;&amp; $Profile.Name &lt;&gt;  &quot;System Administrator&quot; 
&amp;&amp; NOT(ISPICKVAL(StageName, &quot;Closed Won&quot;))</errorConditionFormula>
    <errorMessage>You can&apos;t change stage from &quot;Сlosed Won&quot; to another status</errorMessage>
</ValidationRule>