force-app/main/default/objects/Opportunity/validationRules/Closed_Won_Empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Won_Empty</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL(StageName, &quot;Closed Won&quot;),
    ItemsCount__c = 0
)</errorConditionFormula>
    <errorMessage>You cannot set Closed Won stage with empty Opportinity Products list</errorMessage>
</ValidationRule>